--- a/configs/packages/MangoHud.conf
+++ b/configs/packages/MangoHud.conf
@@ -86,7 +86,7 @@ time_format=%I:%M %p
 #time_no_label
 
 # Logging
-output_folder=~/Documents/MangoHud/logs
+output_folder=$HOME/Documents/mangohud/logs
 log_duration=30
 autostart_log=0
 log_interval=100
