--- a/configs/packages/MangoHud.conf
+++ b/configs/packages/MangoHud.conf
@@ -1,18 +1,11 @@
+# General
 legacy_layout=false
-
-# Blacklist MangoHud from launching in specific applications
 blacklist=
 
-# Hides the HUD by default
-#no_display
-
-# Toggle HUD
+# HUD
 toggle_hud=Shift_R+F12
-
-# Toggle HUD position
 toggle_hud_position=Shift_R+F11
-
-# Default HUD Position
+#no_display
 position=top-left
 #position=top-center
 #position=top-right
@@ -21,13 +14,9 @@ position=top-left
 #position=bottom-left
 #position=bottom-center
 #position=bottom-right
-
-# Background
 background_alpha=0.5
 background_color=000000
 round_corners=5
-
-# Text
 font_size=24
 text_color=FFFFFF
 table_columns=4
@@ -70,6 +59,7 @@ frame_timing
 frametime_color=00FF00
 
 # FPS Limits (first value is the default, cycles from left to right)
+toggle_fps_limit=Shift_L+F1
 fps_limit=160,120,90,60,30,0
 #show_fps_limit
 
@@ -77,17 +67,14 @@ fps_limit=160,120,90,60,30,0
 #fps_limit_method=early
 fps_limit_method=late
 
-# Cycles Between FPS Limits
-toggle_fps_limit=Shift_L+F1
-
 # Time
 time
 time_format=%I:%M %p
 #time_no_label
 
 # Logging
+toggle_logging=Shift_L+F2
 output_folder=$HOME/Documents/mangohud/logs
 log_duration=30
 autostart_log=0
 log_interval=100
-toggle_logging=Shift_L+F2
