--- a/configs/packages/MangoHud_laptop.conf
+++ b/configs/packages/MangoHud_laptop.conf
@@ -1,15 +1,11 @@
+# General
 legacy_layout=false
+blacklist=
 
-# Hides the HUD by default
-#no_display
-
-# Toggle HUD
+# HUD
 toggle_hud=Shift_R+F12
-
-# Toggle HUD position
 toggle_hud_position=Shift_R+F11
-
-# Default HUD Position
+#no_display
 position=top-left
 #position=top-center
 #position=top-right
@@ -18,13 +14,9 @@ position=top-left
 #position=bottom-left
 #position=bottom-center
 #position=bottom-right
-
-# Background
 background_alpha=0.5
 background_color=000000
 round_corners=5
-
-# Text
 font_size=24
 text_color=FFFFFF
 table_columns=4
@@ -38,7 +30,9 @@ gpu_temp
 gpu_mem_temp
 #gpu_fan
 #gpu_power
+#gpu_core_clock
 gpu_color=2E9762
+throttling_status_graph
 
 # CPU
 cpu_text=CPU
@@ -64,7 +58,8 @@ fps
 frame_timing
 frametime_color=00FF00
 
-# FPS Limits (first value is the default, toggles from left to right)
+# FPS Limits (first value is the default, cycles from left to right)
+toggle_fps_limit=Shift_L+F1
 fps_limit=60,30,0
 #show_fps_limit
 
@@ -72,17 +67,14 @@ fps_limit=60,30,0
 #fps_limit_method=early
 fps_limit_method=late
 
-# Cycles Between FPS Limits
-toggle_fps_limit=Shift_L+F1
-
 # Time
 time
 time_format=%I:%M %p
 #time_no_label
 
 # Logging
+toggle_logging=Shift_L+F2
 output_folder=$HOME/Documents/mangohud/logs
 log_duration=30
 autostart_log=0
 log_interval=100
-toggle_logging=Shift_L+F2
